@@ -23,6 +23,7 @@ Menu-Zoom-In: key PageUp
 Menu-Zoom-Out: key PageDown
 Menu-Select: key Return
 Menu-Cancel: key Space
+Menu-Delete: key Delete
 
 # ... and the number pad.  Note that zoom controls on the starmap are
 # different from the paging controls in Super Melee.
@@ -36,6 +37,7 @@ Menu-Zoom-In: key Keypad-+
 Menu-Zoom-Out: key Keypad--
 Menu-Select: key Keypad-Enter
 Menu-Cancel: key Keypad-0
+Menu-Delete: key Keypad-.
 
 # Player 1's flight controls.  This is the bottom player in Super
 # Melee and the player in the full game.  Again, the player has the
